Changes to address jamesh's review comments.
Note that there are a couple of XXX comments here that need to be addressed.
One is a question that I would like to get input on (see schema.xml).  The
other is related to a bug fix to upstream Mailman 2.1 that this patch depends
on, but which is not yet committed.

Specific changes here:

- Split the 'build mailman' steps from the 'run mailman' steps.  IOW, rip the
  build stuff out of runlaunchpad.py and put it in a separate buildmailman.py
  script, that gets called via "make build".

- Added a doctest that checks several things, most important being that
  Mailman can import Launchpad's package namespace and vice versa.  It also
  checks that the mm_cfg.py file has been set up correctly so that it has the
  expected values.

- Remove from schema.xml the mailman.build.site_list setting.  There's no
  reason not to just keep the default of 'mailman'.  Also, don't require any
  of the <mailman> variables; instead give them some reasonable defaults.

- noop.py removed.  I'm a big dummy because I forgot that mm_cfg.MTA=None
  disables the MTA-specific tie-in code. :/

- Fix the .bzrignore values, and the launchpad.conf mistakes.

--- a/.bzrignore
+++ b/.bzrignore
@@ -10,6 +10,7 @@ sourcecode/bzrtools
 sourcecode/cscvs
 sourcecode/gnarly
 sourcecode/hct
+sourcecode/mailman
 sourcecode/psycopgda
 sourcecode/pybaz
 sourcecode/pygettextpo
@@ -27,4 +28,4 @@ database/schema/diagrams/*.dot
 sourcecode/twisted
 thread*.request
 ./TAGS
-mailman
+lib/mailman
