--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -232,7 +232,7 @@ interrupt-check-interval 200
             root /var/tmp/fatsam
             # If true, a Librarian server will be launched by the startup
             # script
-            launch no
+            launch yes
             # Should Librarian twistd be run with --spew for debugging
             spew no
         </librarian_server>
@@ -430,27 +430,23 @@ interrupt-check-interval 200
 	    # imported.
 
 	    # Whether Mailman should be built if it is not already.
-	    build yes
+	    #build no
 
 	    # The --prefix location for the configure script.  This can be a
 	    # relative path to indicate a location relative to the
 	    # runlaunchpad.py script's current working directory.
-	    prefix lib/mailman
+	    #prefix lib/mailman
 
 	    # The 'VAR_DIR' location.  This is where Mailman will put and look
 	    # for variable run time data, such as the list pickles and queue
 	    # directories.
-	    var_dir /tmp/var/mailman
+	    #var_dir /var/mailman
 
 	    # The user:group names that the Mailman process will run under.
-	    # You may need to invoke this as root via sudo to have the
-	    # necessary permissions during the build or run phase.  Leave this
-	    # commented to use the current user and group.
+	    # You may need to invoke buildmailman.py or "make run" as root via
+	    # sudo to have the necessary permissions during the build or run
+	    # phase.  Leave this commented to use the current user and group.
 	    #user_group mailman:mailman
-
-	    # Uncomment this if you want a site list other than the default
-	    # "mailman" mailing list.
-	    #site_list mailman
 
 	    # Uncomment this to specify the site list's owner address and
 	    # password.  Otherwise, a fake email address and random password
@@ -458,13 +454,13 @@ interrupt-check-interval 200
 	    #site_list_owner you@example.com:password
 
 	    # Uncomment this if you want a host_name other than the current
-	    # machine's hostname(1).  This is only used for the email domain
+	    # machine's `hostname -f`.  This is only used for the email domain
 	    # part.
-	    host_name mission.wooz.org
+	    #host_name your.fqdn.hostname
 	</mailman-build>
 
 	# Whether Mailman should be started (i.e mailmanctl start).
-	launch yes
+	#launch yes
 
 	# Host and port for connecting to the outgoing smtp server.  Valid
 	# format is [host][:port] where the default is localhost:25
@@ -768,7 +764,7 @@ interrupt-check-interval 200
 	    # The --prefix location for the configure script.  This can be a
 	    # relative path to indicate a location relative to the
 	    # runlaunchpad.py script's current working directory.
-	    prefix lib/mailman
+	    #prefix lib/mailman
 
 	    # The 'VAR_DIR' location.  This is where Mailman will put and look
 	    # for variable run time data, such as the list pickles and queue
@@ -776,14 +772,10 @@ interrupt-check-interval 200
 	    var_dir /var/tmp/mailman
 
 	    # The user:group names that the Mailman process will run under.
-	    # You may need to invoke this as root via sudo to have the
-	    # necessary permissions during the build or run phase.  Leave this
-	    # commented to use the current user and group.
+	    # You may need to invoke buildmailman.py or "make run" as root via
+	    # sudo to have the necessary permissions during the build or run
+	    # phase.  Leave this commented to use the current user and group.
 	    #user_group mailman:mailman
-
-	    # Uncomment this if you want a site list other than the default
-	    # "mailman" mailing list.
-	    #site_list mailman
 
 	    # Uncomment this to specify the site list's owner address and
 	    # password.  Otherwise, a fake email address and random password
@@ -791,9 +783,9 @@ interrupt-check-interval 200
 	    #site_list_owner you@example.com:password
 
 	    # Uncomment this if you want a host_name other than the current
-	    # machine's hostname(1).  This is only used for the email domain
+	    # machine's `hostname -f`.  This is only used for the email domain
 	    # part.
-	    host_name mission.wooz.org
+	    #host_name your.fqdn.hostname
 	</mailman-build>
 
 	# Whether Mailman should be started (i.e mailmanctl start).
