--- a/sourcecode/Makefile
+++ b/sourcecode/Makefile
@@ -4,8 +4,9 @@ PYTHON=python${PYTHON_VERSION}
 # If we fix them all to have EITHER a good makefile (build and check targets work), or no makefile
 # we can reenable auto detection.
 # test_dirs:=$(shell find . -maxdepth 1 -mindepth 1 -name ".arch-ids" -prune -o -type d -print | grep -v pyarch)
-test_dirs:=buildbot bzr cscvs pybaz pygettextpo pygpgme sqlobject twisted zope
-launchpad_test_dirs:=buildbot pybaz pygettextpo pygpgme sqlobject zope
+build_dirs:=buildbot bzr cscvs pybaz pygettextpo pygpgme sqlobject twisted zope
+test_dirs:=buildbot bzr cscvs pybaz pygettextpo sqlobject twisted zope
+launchpad_test_dirs:=buildbot pybaz pygettextpo sqlobject zope
 
 all:
 
@@ -22,7 +23,7 @@ check_for_launchpad: build
 	done
 
 build:
-	@ for subdir in ${test_dirs}; do\
+	@ for subdir in ${build_dirs}; do\
 		if [ -e $$subdir/Makefile ]; then\
 			$(MAKE) -C $$subdir \
 			PYTHON=${PYTHON} PYTHON_VERSION=${PYTHON_VERSION} \
