--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -192,8 +192,8 @@ interrupt-check-interval 200
         # session data in.
         <launchpad_session>
             dbuser session
-            # dbhost loopback
             dbname session_dev
+            # dbhost localhost
             # id of the cookie used to store the session token
             cookie launchpad_dev
         </launchpad_session>
@@ -486,6 +486,7 @@ interrupt-check-interval 200
         <launchpad_session>
             dbuser session
             dbname launchpad_ftest
+            dbhost localhost
             cookie launchpad_tests
         </launchpad_session>
         <launchpad_errorreports>
