--- a/sourcecode/Makefile
+++ b/sourcecode/Makefile
@@ -1,8 +1,9 @@
 PYTHON_VERSION=2.4
 PYTHON=python${PYTHON_VERSION}
-# Not all packages have a working Makefile. Work around this by hardcoding the ones we test.
-# If we fix them all to have EITHER a good makefile (build and check targets work), or no makefile
-# we can reenable auto detection.
+# Not all packages have a working Makefile. Work around this by hardcoding
+# the ones we test.  If we fix them all to have EITHER a good makefile
+# (build and check targets work), or no makefile we can reenable auto
+# detection.
 # test_dirs:=$(shell find . -maxdepth 1 -mindepth 1 -name ".arch-ids" -prune -o -type d -print | grep -v pyarch)
 build_dirs:=buildbot bzr cscvs pybaz pygettextpo pygpgme sqlobject twisted zope
 test_dirs:=buildbot bzr cscvs pybaz pygettextpo sqlobject twisted zope
@@ -17,7 +18,7 @@ check: build
 	done
 
 check_for_launchpad: build
-	@ for subdir in ${build_dirs}; do\
+	@ for subdir in ${launchpad_test_dirs}; do \
 		$(MAKE) -C $$subdir check \
 		PYTHON=${PYTHON} PYTHON_VERSION=${PYTHON_VERSION} || exit $$?;\
 	done
