Changing file locations of demo instance to /srv/demo.launchpad.net

--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -27,7 +27,7 @@ threads 16
   # filesystem path or the tokens STDOUT or STDERR.
 
   <logfile>
-    path /srv/launchpad.net/demo-logs/launchpad-access.log
+    path /srv/demo.launchpad.net/demo-logs/launchpad-access.log
   </logfile>
 
 </accesslog>
@@ -38,7 +38,7 @@ threads 16
   # filesystem path or the tokens STDOUT or STDERR.
 
   <logfile>
-    path /srv/launchpad.net/demo-logs/launchpad.log
+    path /srv/demo.launchpad.net/demo-logs/launchpad.log
   </logfile>
 
 </eventlog>
@@ -81,7 +81,7 @@ threads 16
             cookie launchpad_demo
         </launchpad_session>
         <launchpad_errorreports>
-            errordir /srv/launchpad.net/demo-logs/oops
+            errordir /srv/demo.launchpad.net/demo-logs/oops
             oops_prefix DEMO
             copy_to_zlog false
         </launchpad_errorreports>
@@ -138,8 +138,8 @@ threads 16
         buildd_download_url http://librarian.demo.launchpad.net/
         <librarian_server>
             # Configuration used if we are running a librarian server.
-            logfile /srv/launchpad.net/demo-logs/librarian.log
-            root /srv/launchpad.net/librarian
+            logfile /srv/demo.launchpad.net/demo-logs/librarian.log
+            root /srv/demo.launchpad.net/librarian
             launch yes
             spew no
             upstream_host librarian.launchpad.net
