Fix a bunch of trivial mirror prober bugs: 46662, 68395 and 107473

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -344,6 +344,7 @@ interrupt-check-interval 200
 
     <distributionmirrorprober>
         dbuser distributionmirror
+        use_proxy false
         releases_file_list_url file:lib/canonical/launchpad/doc/ubuntu-releases.testdata
         timeout 10
     </distributionmirrorprober>
@@ -599,6 +600,7 @@ interrupt-check-interval 200
 
     <distributionmirrorprober>
         dbuser distributionmirror
+        use_proxy false
         releases_file_list_url file:lib/canonical/launchpad/doc/ubuntu-releases.testdata
         timeout 10
     </distributionmirrorprober>
