Use question<id>@answers.launchpad.net as answer tracker email address.

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -283,7 +283,7 @@ interrupt-check-interval 200
     <answertracker>
         dbuser answertracker
         # The email domain, to which incoming mail should be sent.
-        email_domain support.launchpad.net
+        email_domain answers.launchpad.net
     </answertracker>
 
     <zopeless>
@@ -633,7 +633,7 @@ interrupt-check-interval 200
 
     <answertracker>
         dbuser answertracker
-        email_domain support.launchpad.net
+        email_domain answers.launchpad.net
     </answertracker>
 
     <buildsequencer>
