Turn beta redirection back on in production

--- a/configs/production3/launchpad.conf
+++ b/configs/production3/launchpad.conf
@@ -82,6 +82,8 @@ interrupt-check-interval 200
             copy_to_zlog false
         </launchpad_errorreports>
 
+        beta_testers_redirection_host beta.launchpad.net
+
         <virtual_hosts>
             use_https yes
             <mainsite>
