--- a/configs/production2/launchpad.conf
+++ b/configs/production2/launchpad.conf
@@ -81,6 +81,9 @@ interrupt-check-interval 200
             oops_prefix B
             copy_to_zlog false
         </launchpad_errorreports>
+
+        beta_testers_redirection_host beta.launchpad.net
+
         <virtual_hosts>
             use_https yes
             <mainsite>
