--- a/configs/production5/launchpad.conf
+++ b/configs/production5/launchpad.conf
@@ -78,7 +78,7 @@ interrupt-check-interval 200
         </launchpad_session>
         <launchpad_errorreports>
             errordir /srv/launchpad.net/production-logs
-            oops_prefix D
+            oops_prefix E
             copy_to_zlog false
         </launchpad_errorreports>
 
