--- a/.bzrignore
+++ b/.bzrignore
@@ -10,6 +10,7 @@ sourcecode/bzrtools
 sourcecode/cscvs
 sourcecode/gnarly
 sourcecode/hct
+sourcecode/openid
 sourcecode/psycopgda
 sourcecode/pybaz
 sourcecode/pygettextpo
@@ -18,8 +19,11 @@ sourcecode/pytz
 sourcecode/sourcerer
 sourcecode/sqlobject
 sourcecode/sqlos
+sourcecode/storm
 sourcecode/testresources
+sourcecode/urljr
 sourcecode/zope
+sourcecode/zstorm
 ./botmaster
 ./tags
 database/schema/diagrams/*.ps
