Make registry stats use LaunchpadStatistic plumbing

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -144,12 +144,13 @@ public.personalsourcepackagepublication = SELECT
 
 [statistician]
 type=user
-public.bug                              = SELECT
-public.bugtask                          = SELECT
-public.build                            = SELECT
 public.binarypackagename                = SELECT
 public.binarypackagepublishinghistory   = SELECT
 public.binarypackagerelease             = SELECT
+public.branch                           = SELECT
+public.bug                              = SELECT
+public.bugtask                          = SELECT
+public.build                            = SELECT
 public.distribution                     = SELECT
 public.distributionsourcepackagecache   = SELECT, INSERT, UPDATE, DELETE
 public.distroarchrelease                = SELECT, UPDATE
@@ -170,11 +171,12 @@ public.pomsgid                          = SELECT
 public.potmsgset                        = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
+public.question                         = SELECT
 public.scriptactivity                   = SELECT, INSERT
 public.sourcepackagename                = SELECT
 public.sourcepackagepublishinghistory   = SELECT
 public.sourcepackagerelease             = SELECT
-public.question                         = SELECT
+public.specification                    = SELECT
 
 [librarian]
 type=user
