--- a/.bzrignore
+++ b/.bzrignore
@@ -10,6 +10,7 @@ sourcecode/bzrtools
 sourcecode/cscvs
 sourcecode/gnarly
 sourcecode/hct
+sourcecode/mailman
 sourcecode/openid
 sourcecode/psycopgda
 sourcecode/pybaz
