Ouch.  I forgot to commit these changes.
- In the Makefile, 'mailman_instance' target depends on the 'build' target.
- The testrunner configuration in default/launchpad.conf should be identical
  to the default section.  IOW, Mailman should not be enabled for build or
  run.

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -773,7 +773,7 @@ interrupt-check-interval 200
             # imported.
 
             # Whether Mailman should be built if it is not already.
-            build yes
+            #build no
 
             # The --prefix location for the configure script.  This can be a
             # relative path to indicate a location relative to the
@@ -783,7 +783,7 @@ interrupt-check-interval 200
             # The 'VAR_DIR' location.  This is where Mailman will put and look
             # for variable run time data, such as the list pickles and queue
             # directories.
-            var_dir /var/tmp/mailman
+            #var_dir /var/mailman
 
             # The user:group names that the Mailman process will run under.
             # You may need to invoke buildmailman.py or "make run" as root via
@@ -803,7 +803,11 @@ interrupt-check-interval 200
         </mailman-build>
 
         # Whether Mailman should be started (i.e mailmanctl start).
-        launch yes
+        #launch yes
+
+        # Host and port for connecting to the outgoing smtp server.  Valid
+        # format is [host][:port] where the default is localhost:25
+        #smtp localhost:25
 
     </mailman>
 
