--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -74,6 +74,7 @@ public.karmacache                       = SELECT
 public.karmacategory                    = SELECT
 public.karmatotalcache                  = SELECT
 public.launchpadstatistic               = SELECT
+public.libraryfilealias                 = SELECT, INSERT, UPDATE, DELETE
 public.logintoken                       = SELECT, INSERT, UPDATE, DELETE
 public.mentoringoffer                   = SELECT, INSERT, UPDATE, DELETE
 public.messagechunk                     = SELECT, INSERT
@@ -94,6 +95,7 @@ public.polloption                       = SELECT, INSERT, UPDATE, DELETE
 public.poll                             = SELECT, INSERT, UPDATE
 public.productbounty                    = SELECT, INSERT, UPDATE
 public.projectbounty                    = SELECT, INSERT, UPDATE
+public.productreleasefile               = SELECT, INSERT, DELETE
 public.requestedcds                     = SELECT, INSERT, UPDATE, DELETE
 public.scriptactivity                   = SELECT, INSERT
 public.shipitreport                     = SELECT, INSERT
