--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -436,7 +436,7 @@ interrupt-check-interval 200
 # This is the config used by the test runner.
 <canonical testrunner>
     dbname launchpad_ftest
-    dbhost localhost
+    #dbhost localhost
     randomise_select_results true
     show_tracebacks true
     # chunkydiff defaults to off as its results are generally not that
@@ -499,7 +499,7 @@ interrupt-check-interval 200
         <launchpad_session>
             dbuser session
             dbname launchpad_ftest
-            dbhost localhost
+            #dbhost localhost
             cookie launchpad_tests
         </launchpad_session>
         <launchpad_errorreports>
