PPA list page under '+ubuntu' (it's not definitive)

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -341,6 +341,7 @@ interrupt-check-interval 200
 
     <personalpackagearchive>
         root /srv/launchpad.net/ppa/
+        base_url http://ppa.dogfood.launchpad.net/
     </personalpackagearchive>
 
 </canonical>
@@ -404,6 +405,7 @@ interrupt-check-interval 200
 
     <personalpackagearchive>
         root /srv/launchpad.net/ppa/
+        base_url http://ppa.dogfood.launchpad.net/
     </personalpackagearchive>
 
 </canonical>
