grant INSERT permission on Archive table to the 'uploader' db user

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -618,7 +618,7 @@ public.validpersonorteamcache           = SELECT
 [uploader]
 type=user
 # Everything is keyed off an archive
-public.archive                          = SELECT
+public.archive                          = SELECT, INSERT
 
 # This block is granted insert in order to be able to create maintainers
 # on the fly when we encounter them.
