run the tests as the process-accepted.py db user.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -674,8 +674,8 @@ public.teamparticipation                = SELECT, INSERT
 public.distrocomponentuploader          = SELECT
 
 # The Queue
-public.distroreleasequeue               = SELECT, UPDATE
-public.distroreleasequeuesource         = SELECT
+public.distroreleasequeue               = SELECT, UPDATE, INSERT
+public.distroreleasequeuesource         = SELECT, INSERT
 public.distroreleasequeuebuild          = SELECT
 public.distroreleasequeuecustom         = SELECT
 
@@ -713,6 +713,24 @@ public.personalsourcepackagepublication = SELECT, INSERT, UPDATE
 
 public.scriptactivity                   = SELECT, INSERT
 
+# Closing bugs.
+public.bug                              = SELECT, INSERT, UPDATE
+public.bugactivity                      = SELECT, INSERT
+public.bugsubscription                  = SELECT, INSERT
+public.bugnotification                  = SELECT, INSERT
+public.bugnomination                    = SELECT, INSERT
+public.bugtask                          = SELECT, INSERT, UPDATE
+public.product                          = SELECT
+public.bugmessage                       = SELECT, INSERT
+public.message                          = SELECT, INSERT
+public.messagechunk                     = SELECT, INSERT
+public.productseries                    = SELECT
+public.validpersonorteamcache           = SELECT
+public.karmaaction                      = SELECT
+public.karma                            = SELECT, INSERT
+public.questionbug                      = SELECT
+public.question                         = SELECT
+public.packagebugcontact                = SELECT
 
 [ppad]
 type=user
