fix dogfood configuration (mailman & writable mailqueue dir)

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -339,6 +339,11 @@ interrupt-check-interval 200
         branches_root /srv/supermirror-ng/push-branches/
     </supermirrorsftp>
 
+    <mailman>
+        <mailman-build>
+        </mailman-build>
+    </mailman>
+
 </canonical>
 
 # This is the config used by the test runner.
