--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -223,12 +223,12 @@ interrupt-check-interval 200
         masterlock /srv/sm-ng/masterlock
         branchlistsource http://gangotri.ubuntu.com:9000/supermirror-pull-list.txt
     </supermirror>
-    <supermirrorsftp>
+    <codehosting>
         authserver http://macquarie.warthogs.hbd.com:8999/v2/
         host_key_pair_path /srv/sm-ng/keys/
         branches_root /srv/sm-ng/push-branches/
         port tcp:22:interface=82.211.81.254
-    </supermirrorsftp>
+    </codehosting>
 </canonical>
 
 # This is the config used by the test runner.
