Update beta configs

--- a/configs/beta3/launchpad.conf
+++ b/configs/beta3/launchpad.conf
@@ -72,6 +72,9 @@ threads 4
                 hostname answers.beta.launchpad.net
             </answers>
             <shipitubuntu>
+            <openid>
+                hostname openid.beta.launchpad.net
+            </openid>
                 hostname ubuntu.shipit.beta.lauchpad.net
             </shipitubuntu>
             <shipitkubuntu>
