External domain should not mention openid yet

--- a/configs/production3/launchpad.conf
+++ b/configs/production3/launchpad.conf
@@ -104,7 +104,7 @@ interrupt-check-interval 200
                 hostname answers.launchpad.net
             </answers>
             <openid>
-                hostname openid.launchpad.net
+                hostname login.launchpad.net
             </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.com
