--- a/configs/beta3/launchpad.conf
+++ b/configs/beta3/launchpad.conf
@@ -71,10 +71,10 @@ threads 4
             <answers>
                 hostname answers.beta.launchpad.net
             </answers>
-            <shipitubuntu>
             <openid>
-                hostname openid.beta.launchpad.net
+                hostname login.beta.launchpad.net
             </openid>
+            <shipitubuntu>
                 hostname ubuntu.shipit.beta.lauchpad.net
             </shipitubuntu>
             <shipitkubuntu>
