--- a/configs/beta4/launchpad.conf
+++ b/configs/beta4/launchpad.conf
@@ -72,7 +72,7 @@ threads 4
                 hostname answers.beta.launchpad.net
             </answers>
             <openid>
-                hostname openid.beta.launchpad.net
+                hostname login.beta.launchpad.net
             </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.beta.lauchpad.net
