--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -64,7 +64,7 @@ interrupt-check-interval 200
                 hostname answers.edge.launchpad.net
             </answers>
             <openid>
-                hostname openid.edge.launchpad.net
+                hostname login.edge.launchpad.net
             </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.edge.launchpad.net
