--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -106,7 +106,7 @@ interrupt-check-interval 200
                 hostname answers.launchpad.net
             </answers>
             <openid>
-                hostname openid.launchpad.net
+                hostname login.launchpad.net
             </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.com
