--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -62,6 +62,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.staging.launchpad.net
             </answers>
+            <openid>
+                hostname login.staging.launchpad.net
+            </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.staging.launchpad.net
                 althostnames shipit.staging.launchpad.net
