Changing beta message per mrevells request

--- a/configs/beta2/launchpad.conf
+++ b/configs/beta2/launchpad.conf
@@ -42,7 +42,7 @@ threads 4
 
     <launchpad>
         # restrict_to_team launchpad-beta-testers
-        site_message This is a private beta. Please do not post screenshots publicly. <a href="https://bugs.beta.launchpad.net/launchpad">Bug reports</a> and feedback welcome.
+        site_message We're not beta testing any features at the moment.
         # CREATE ROLE beta2 LOGIN IN ROLE launchpad
         dbuser beta2
         errors_address launchpad-error-reports@lists.canonical.com
