change dogfood config to send emails

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -286,7 +286,7 @@ interrupt-check-interval 200
     </gina>
 
     <buildsequencer>
-        mailproblemsto cprov@async.com.br
+        mailproblemsto celso.providelo@gmail.com
         launch no
         logfile -
         <buildsequencer_job slave_scanner>
@@ -301,10 +301,10 @@ interrupt-check-interval 200
 
     <uploader>
         dbuser uploader
-        default_recipient_name Launchpad Admins
-        default_recipient_address launchpad@lists.canonical.com
-        default_sender_name Launchpad Admins
-        default_sender_address launchpad@lists.canonical.com
+        default_recipient_name Launchpad Dogfood
+        default_recipient_address launchpad@localhost
+        default_sender_name Launchpad Dogfood
+        default_sender_address no_reply@launchpad.net
     </uploader>
 
     <uploadqueue>
