Uncomment a config option which was accidentally left commented out.

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -485,7 +485,7 @@ interrupt-check-interval 200
 # This is the config used by the test runner.
 <canonical testrunner>
     dbname launchpad_ftest
-    #dbhost localhost
+    dbhost localhost
     randomise_select_results true
     show_tracebacks true
     # chunkydiff defaults to off as its results are generally not that
