Restrict OpenID provider access to a single team

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -92,6 +92,9 @@ interrupt-check-interval 200
         # PostgreSQL user the launchpad Zope3 instance connects as.
         dbuser launchpad
 
+        # Who can use Launchpad as an OpenID provider.
+        openid_users all
+
         # Email address, to which all error reports are sent.
         # Messages should have distinct Subject: or Keywords: headers
         # so they can be filtered easily. Whenever code starts using this,
@@ -437,6 +440,7 @@ interrupt-check-interval 200
 
     <launchpad>
         dbuser launchpad
+        openid_users admins
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
         oops_root_url https://chinstrap.ubuntu.com/~jamesh/oops.cgi/
