Ignore sourcecode/pyax

--- a/.bzrignore
+++ b/.bzrignore
@@ -13,6 +13,7 @@ sourcecode/hct
 sourcecode/mailman
 sourcecode/openid
 sourcecode/psycopgda
+sourcecode/pyax
 sourcecode/pybaz
 sourcecode/pygettextpo
 sourcecode/pygpgme
