give SignedCoC DB permission for 'uploader' user (we have to check it for PPAs)

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -632,6 +632,7 @@ public.validpersonorteamcache           = SELECT
 # So that it works with my key in place then nascentupload.txt won't have
 # to insert it.
 public.gpgkey                           = SELECT, INSERT
+public.signedcodeofconduct              = SELECT
 public.distribution                     = SELECT
 public.distrorelease                    = SELECT, UPDATE
 public.distroarchrelease                = SELECT
