don't use transaction.commit(), and switch db user when doing test setup.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -676,8 +676,8 @@ public.teamparticipation                = SELECT, INSERT
 public.distrocomponentuploader          = SELECT
 
 # The Queue
-public.distroreleasequeue               = SELECT, UPDATE, INSERT
-public.distroreleasequeuesource         = SELECT, INSERT
+public.distroreleasequeue               = SELECT, UPDATE
+public.distroreleasequeuesource         = SELECT
 public.distroreleasequeuebuild          = SELECT
 public.distroreleasequeuecustom         = SELECT
 
@@ -716,12 +716,12 @@ public.personalsourcepackagepublication = SELECT, INSERT, UPDATE
 public.scriptactivity                   = SELECT, INSERT
 
 # Closing bugs.
-public.bug                              = SELECT, INSERT, UPDATE
+public.bug                              = SELECT, UPDATE
 public.bugactivity                      = SELECT, INSERT
-public.bugsubscription                  = SELECT, INSERT
+public.bugsubscription                  = SELECT
 public.bugnotification                  = SELECT, INSERT
-public.bugnomination                    = SELECT, INSERT
-public.bugtask                          = SELECT, INSERT, UPDATE
+public.bugnomination                    = SELECT
+public.bugtask                          = SELECT, UPDATE
 public.product                          = SELECT
 public.bugmessage                       = SELECT, INSERT
 public.message                          = SELECT, INSERT
