--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -51,29 +51,30 @@ type=user
 groups=write
 public.is_blacklisted_name(text)        = EXECUTE
 public.name_blacklist_match(text)       = EXECUTE
+public.answercontact                    = SELECT, INSERT, UPDATE, DELETE
 public.binaryandsourcepackagenameview   = SELECT
 public.binarypackagepublishinghistory   = SELECT
 public.bountysubscription               = SELECT, INSERT, UPDATE, DELETE
-public.branch                           = SELECT, INSERT, UPDATE
 public.branchmessage                    = SELECT, INSERT
 public.branchrevision                   = SELECT
+public.branch                           = SELECT, INSERT, UPDATE
 public.branchsubscription               = SELECT, INSERT, UPDATE, DELETE
 public.branchvisibilitypolicy           = SELECT, INSERT, UPDATE, DELETE
 public.bugattachment                    = SELECT, INSERT, UPDATE, DELETE
 public.bugbranch                        = SELECT, INSERT, UPDATE, DELETE
 public.bugcve                           = SELECT, INSERT, DELETE
-public.bugnotification                  = SELECT, INSERT, UPDATE, DELETE
 public.bugnomination                    = SELECT, UPDATE
+public.bugnotification                  = SELECT, INSERT, UPDATE, DELETE
 public.bugtag                           = SELECT, INSERT, DELETE
 public.continent                        = SELECT
-public.cve                              = SELECT, INSERT, UPDATE
 public.cvereference                     = SELECT, INSERT
+public.cve                              = SELECT, INSERT, UPDATE
 public.developmentmanifest              = SELECT, INSERT, UPDATE, DELETE
 public.distributionbounty               = SELECT, INSERT, UPDATE
 public.distributionmirror               = SELECT, INSERT, UPDATE
+public.distributionsourcepackagecache   = SELECT
 public.distroreleaselanguage            = SELECT, INSERT, UPDATE
 public.distroreleasepackagecache        = SELECT
-public.distributionsourcepackagecache   = SELECT
 public.emailaddress                     = SELECT, INSERT, UPDATE, DELETE
 public.karmacache                       = SELECT
 public.karmacategory                    = SELECT
@@ -85,26 +86,42 @@ public.mentoringoffer                   = SELECT, INSERT, UPDATE, DELETE
 public.messagechunk                     = SELECT, INSERT
 public.mirrorcdimagedistrorelease       = SELECT, INSERT, DELETE
 public.mirrordistroarchrelease          = SELECT, INSERT, DELETE, UPDATE
+public.mirrordistroreleasesource        = SELECT, INSERT, UPDATE, DELETE
 public.mirrorproberecord                = SELECT, INSERT, DELETE
 public.nameblacklist                    = SELECT, INSERT, UPDATE, DELETE
-public.mirrordistroreleasesource        = SELECT, INSERT, UPDATE, DELETE
 public.officialbugtag                   = SELECT, INSERT, UPDATE, DELETE
-public.openidauthorization              = SELECT, INSERT, UPDATE, DELETE
 public.openidassociations               = SELECT, INSERT, DELETE
+public.openidauthorization              = SELECT, INSERT, UPDATE, DELETE
 public.packagebugcontact                = SELECT, INSERT, UPDATE, DELETE
+public.personalpackagearchive           = SELECT, UPDATE
+public.personalsourcepackagepublication = SELECT
 public.personlanguage                   = SELECT, INSERT, UPDATE, DELETE
-public.pofiletranslator                 = SELECT
 public.poexportrequest                  = SELECT, INSERT, UPDATE, DELETE
 public.poexport                         = SELECT
 public.pofiletranslator                 = SELECT
-public.potexport                        = SELECT
+public.pofiletranslator                 = SELECT
 public.polloption                       = SELECT, INSERT, UPDATE, DELETE
 public.poll                             = SELECT, INSERT, UPDATE
+public.potexport                        = SELECT
 public.productbounty                    = SELECT, INSERT, UPDATE
 public.productreleasefile               = SELECT, INSERT, DELETE
-public.projectbounty                    = SELECT, INSERT, UPDATE
 public.productreleasefile               = SELECT, INSERT, DELETE
+public.projectbounty                    = SELECT, INSERT, UPDATE
+public.questionbug                      = SELECT, INSERT, DELETE
+public.questionmessage                  = SELECT, INSERT
+public.questionreopening                = SELECT, INSERT, UPDATE
+public.question                         = SELECT, INSERT, UPDATE
+public.questionsubscription             = SELECT, INSERT, UPDATE, DELETE
 public.requestedcds                     = SELECT, INSERT, UPDATE, DELETE
+# FIXME: public.revision should not have UPDATE permission. This is
+# being done because the person merging code wants to touch every
+# table who has an owner field. The Revision table should not have
+# an owner field, though, because it's not meaningful in that
+# context. -- Gustavo Niemeyer, 2005-11-02
+public.revision                         = SELECT, UPDATE
+public.revisionauthor                   = SELECT
+public.revisionnumber                   = SELECT
+public.revisionparent                   = SELECT
 public.scriptactivity                   = SELECT, INSERT
 public.shipitreport                     = SELECT, INSERT
 public.shipment                         = SELECT, INSERT, UPDATE
@@ -112,41 +129,25 @@ public.shippingrequest                  = SELECT, INSERT, UPDATE, DELETE
 public.shippingrun                      = SELECT, INSERT, UPDATE
 public.shockandawe                      = SELECT, INSERT, UPDATE
 public.sourcepackagepublishinghistory   = SELECT
+public.specificationbranch              = SELECT, INSERT, UPDATE, DELETE
 public.specificationbug                 = SELECT, INSERT, DELETE
 public.specificationdependency          = SELECT, INSERT, DELETE
 public.specificationfeedback            = SELECT, INSERT, UPDATE, DELETE
+public.specificationmessage             = SELECT, INSERT
 public.specification                    = SELECT, INSERT, UPDATE
-public.specificationbranch              = SELECT, INSERT, UPDATE, DELETE
 public.specificationsubscription        = SELECT, INSERT, UPDATE, DELETE
 public.sprintattendance                 = SELECT, INSERT, UPDATE, DELETE
 public.sprint                           = SELECT, INSERT, UPDATE
 public.sprintspecification              = SELECT, INSERT, UPDATE, DELETE
 public.standardshipitrequest            = SELECT, INSERT, UPDATE, DELETE
-public.answercontact                    = SELECT, INSERT, UPDATE, DELETE
 public.temporaryblobstorage             = SELECT, INSERT, DELETE
-public.questionbug                      = SELECT, INSERT, DELETE
-public.questionmessage                  = SELECT, INSERT
-public.questionreopening                = SELECT, INSERT, UPDATE
-public.question                         = SELECT, INSERT, UPDATE
-public.questionsubscription             = SELECT, INSERT, UPDATE, DELETE
 public.translationgroup                 = SELECT, INSERT, UPDATE
-public.translator                       = SELECT, INSERT, UPDATE, DELETE
 public.translationimportqueueentry      = SELECT, INSERT, UPDATE, DELETE
+public.translator                       = SELECT, INSERT, UPDATE, DELETE
 public.validpersonorteamcache           = SELECT
 public.votecast                         = SELECT, INSERT
 public.vote                             = SELECT, INSERT, UPDATE
 public.wikiname                         = SELECT, INSERT, UPDATE, DELETE
-# FIXME: public.revision should not have UPDATE permission. This is
-# being done because the person merging code wants to touch every
-# table who has an owner field. The Revision table should not have
-# an owner field, though, because it's not meaningful in that
-# context. -- Gustavo Niemeyer, 2005-11-02
-public.revision                         = SELECT, UPDATE
-public.revisionnumber                   = SELECT
-public.revisionparent                   = SELECT
-public.revisionauthor                   = SELECT
-public.personalpackagearchive           = SELECT, UPDATE
-public.personalsourcepackagepublication = SELECT
 
 [statistician]
 type=user
