--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -79,6 +79,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.dogfood.launchpad.net
             </answers>
+            <openid>
+                hostname openid.launchpad.dev
+            </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.dogfood.launchpad.net
                 althostnames shipit.dogfood.launchpad.net
