basic non-invasive schema changes

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -92,6 +92,27 @@ interrupt-check-interval 200
         # PostgreSQL user the launchpad Zope3 instance connects as.
         dbuser launchpad
 
+        # This setting controls two related things:
+        # 1. The maximum time a single SQL statement is given to execute
+        #    in.
+        # 2. The maximum time a web request is given to run in.
+        # The time is given in milliseconds.
+        #
+        # If a statement takes longer than this to execute, then it will
+        # fail. If a request is taking longer than this to run, then a
+        # RequestExpired exception will be raised, and the transaction
+        # hosed, before the next database query would be started.
+        #
+        # A value of 0 turns off the timeout.  If this value is
+        # not set, Postgresql's default statement timeout is used, and
+        # requests may run without constraint.
+        # db_statement_timeout 12000
+
+        # The soft timeout value.  If a request takes longer than this
+        # amount of time to process, then an OOPS is logged.  This value
+        # should be less than db_statement_timeout.
+        # soft_request_timeout 1000
+
         # Who can use Launchpad as an OpenID provider.
         openid_users all
 
@@ -132,26 +153,6 @@ interrupt-check-interval 200
         # Maximum size of ProductRelease download files in bytes. A value of 0 means
         # no limit.
         max_productrelease_file_size 31457280
-
-        # This setting controls two related things:
-        # 1. The maximum time a single SQL statement is given to execute in.
-        # 2. The maximum time a web request is given to run in.
-        # The time is given in milliseconds.
-        #
-        # If a statement takes longer than this to execute, then it will
-        # fail. If a request is taking longer than this to run, then a
-        # RequestExpired exception will be raised, and the transaction hosed,
-        # before the next database query would be started.
-        #
-        # A value of 0 turns off the timeout.  If this value is
-        # not set, Postgresql's default statement timeout is used, and requests
-        # may run without constraint.
-        # db_statement_timeout 12000
-
-        # The soft timeout value.  If a request takes longer than this
-        # amount of time to process, then an OOPS is logged.  This value
-        # should be less than db_statement_timeout.
-        # soft_request_timeout 1000
 
         # The minimum notification level displayed to users. Set to 'info'
         # on production and 'debug' on development boxes.
@@ -497,6 +498,7 @@ interrupt-check-interval 200
     dbname launchpad_ftest
     dbhost localhost
     randomise_select_results true
+
     show_tracebacks true
     # chunkydiff defaults to off as its results are generally not that
     # useful.
