Change production cookie name to close Bug #90384 whilst working around Bug #115404

--- a/configs/lpnet2/launchpad.conf
+++ b/configs/lpnet2/launchpad.conf
@@ -75,6 +75,7 @@ interrupt-check-interval 200
             dbuser session_prod2
             dbhost jubany.ubuntu.com
             dbname session_prod
+            cookie lp
         </launchpad_session>
         <launchpad_errorreports>
             errordir /srv/launchpad.net/production-logs
