--- a/configs/lpnet1/launchpad.conf
+++ b/configs/lpnet1/launchpad.conf
@@ -77,6 +77,7 @@ interrupt-check-interval 200
             dbuser session_prod1
             dbhost jubany.ubuntu.com
             dbname session_prod
+            cookie lp
         </launchpad_session>
         <launchpad_errorreports>
             errordir /srv/launchpad.net/production-logs
