--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -102,6 +102,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.launchpad.net
             </answers>
+            <openid>
+                hostname login.launchpad.net
+            </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.com
             </shipitubuntu>
