enable email sending in dogfood

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -159,7 +159,7 @@ interrupt-check-interval 200
         # Configuration specific for code that is running in the Zopeless
         # environment. Hopefully this section will disappear when the
         # Zope and Zopeless environments grow closer.
-        send_email false
+        send_email true
         smtp_host localhost
         smtp_port 25
     </zopeless>
