Improving lp-buildd makefile.

--- a/lib/canonical/buildd/Makefile
+++ b/lib/canonical/buildd/Makefile
@@ -1,10 +1,13 @@
-all: clean deb
+# Copyright 2007 Canonical Ltd.  All rights reserved.
 
+all: deb
 
-deb:
+deb: clean
 	dpkg-buildpackage -rfakeroot -b
 
 clean:
 	fakeroot debian/rules clean
 	rm -f launchpad-buildd*deb
 	rm -f ../launchpad-buildd*changes
+
+.PHONY: all clean deb
