--- a/configs/lpnet2/launchpad.conf
+++ b/configs/lpnet2/launchpad.conf
@@ -130,8 +130,8 @@ interrupt-check-interval 200
         upload_port 9090
         download_host mizuho.ubuntu.com
         download_port 8000
-        download_url http://librarian.launchpad.net/
-        buildd_download_url http://librarian.launchpad.net/
+        download_url http://launchpadlibrarian.net/
+        buildd_download_url http://launchpadlibrarian.net/
         <librarian_server>
             # Configuration used if we are running a librarian server.
             root /var/tmp/fatsam
