--- a/configs/lpnet1/launchpad.conf
+++ b/configs/lpnet1/launchpad.conf
@@ -67,6 +67,8 @@ interrupt-check-interval 200
     <launchpad>
         # CREATE ROLE prod1 LOGIN IN ROLE launchpad
         dbuser prod1
+        # Who can use Launchpad as an OpenID provider.
+        openid_users openid-testers
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
         db_statement_timeout 25000
