--- a/configs/lpnet2/launchpad.conf
+++ b/configs/lpnet2/launchpad.conf
@@ -66,6 +66,8 @@ interrupt-check-interval 200
 
     <launchpad>
         dbuser prod2
+        # Who can use Launchpad as an OpenID provider.
+        openid_users openid-testers
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
         db_statement_timeout 25000
