Adding the openid-testers setting to staging as well

--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -38,6 +38,7 @@ interrupt-check-interval 200
 
     <launchpad>
         dbuser launchpad
+        openid_users openid-testers
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.staging.launchpad.net
 
