various fixes to actually get the initial CodeImport tests to pass, including security.cfg which I'd never seen before...

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -60,6 +60,7 @@ public.bugcve                           = SELECT, INSERT, DELETE
 public.bugnotification                  = SELECT, INSERT, UPDATE, DELETE
 public.bugnomination                    = SELECT, UPDATE
 public.bugtag                           = SELECT, INSERT, DELETE
+public.codeimport                       = SELECT, INSERT, UPDATE, DELETE
 public.continent                        = SELECT
 public.cve                              = SELECT, INSERT, UPDATE
 public.cvereference                     = SELECT, INSERT
