Fix for buildd-sequencer

--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -96,8 +96,8 @@ interrupt-check-interval 200
         upload_port 9090
         download_host mizuho.ubuntu.com
         download_port 8000
-        download_url http://librarian.launchpad.net/
-        buildd_download_url http://librarian.launchpad.net/
+        download_url http://launchpadlibrarian.net/
+        buildd_download_url http://launchpadlibrarian.net/
         <librarian_server>
             logfile /srv/launchpad.net/logs/librarian.log
             root /tmp/fatsam
