Updating staging and demo configs for launchpadlibrarian

--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -134,8 +134,8 @@ threads 16
         upload_port 9090
         download_host carbon.ubuntu.com
         download_port 8000
-        download_url http://librarian.demo.launchpad.net/
-        buildd_download_url http://librarian.demo.launchpad.net/
+        download_url http://demo.launchpadlibrarian.net/
+        buildd_download_url http://demo.launchpadlibrarian.net/
         <librarian_server>
             # Configuration used if we are running a librarian server.
             logfile /srv/demo.launchpad.net/demo-logs/librarian.log
