--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -105,8 +105,8 @@ interrupt-check-interval 200
         upload_port 58090
         download_host asuka.ubuntu.com
         download_port 9040
-        download_url http://librarian.staging.launchpad.net/
-        buildd_download_url http://librarian.staging.launchpad.net/
+        download_url http://staging.launchpadlibrarian.net/
+        buildd_download_url http://staging.launchpadlibrarian.net/
         <librarian_server>
             logfile /srv/staging.launchpad.net/staging-logs/librarian.log
             root /srv/staging.launchpad.net/staging/librarian
