--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -77,6 +77,7 @@ public.distributionsourcepackagecache   = SELECT
 public.distroreleaselanguage            = SELECT, INSERT, UPDATE
 public.distroreleasepackagecache        = SELECT
 public.emailaddress                     = SELECT, INSERT, UPDATE, DELETE
+public.faq                              = SELECT, INSERT, UPDATE, DELETE
 public.karmacache                       = SELECT
 public.karmacategory                    = SELECT
 public.karmatotalcache                  = SELECT
