Fixed productreleasefinder.py db permission problem.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -402,6 +402,7 @@ public.person                           = SELECT
 # Needed to write to the librarian
 public.libraryfilealias                 = SELECT, INSERT
 public.libraryfilecontent               = SELECT, INSERT
+public.milestone                        = SELECT, INSERT
 
 [pofilestats]
 # Translations POFile statistics verification/update script
