--- a/versions.cfg
+++ b/versions.cfg
@@ -17,3 +17,8 @@ zope.i18nmessageid = 3.4.3
 zope.interface = 3.5.1
 zope.schema = 3.5.4
 zope.testing = 3.7.4
+z3c.ptcompat = 0.5.2
+z3c.pt = 1.0b16
+chameleon.zpt = 1.0b17
+chameleon.core = 1.0b33
+sourcecodegen = 0.6.9
