--- a/versions.cfg
+++ b/versions.cfg
@@ -19,6 +19,7 @@ zope.schema = 3.5.4
 zope.testing = 3.7.4
 
 zope.component = 3.5.1
+zope.contentprovider = 3.5.0
 zope.deferredimport = 3.4.0
 zope.deprecation = 3.4.0
 zope.dottedname = 3.4.5
@@ -29,8 +30,12 @@ zope.location = 3.5.2
 zope.proxy = 3.5.0
 zope.publisher = 3.5.6
 zope.security = 3.6.0
+zope.tal = 3.4.0
 zope.traversing = 3.5.2
 zc.recipe.testrunner = 1.1.0
+
+elementtree = 1.2.6-20050316
+pytz = 2009g
 
 z3c.ptcompat = 0.5.2
 z3c.pt = 1.0b16
