incremental changes to using more eggs

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,7 +2,15 @@
 versions = versions
 
 [versions]
+httplib2 = 0.4.0
 ipython = 0.9.1
+launchpadlib = 1.0
+lazr.uri = 1.0
+oauth = 1.0
+python-openid = 2.2.4
+setuptools = 0.6c9
+simplejson = 2.0.9
+wadllib = 0.1
 z3c.recipe.filetemplate = 2.0.2
 z3c.recipe.i18n = 0.5.3
 z3c.recipe.tag = 0.2.0
