--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,10 @@ install-from-cache = true
 # upgrades.  Newly-added packages should also add their desired version number
 # to versions.cfg.
 extends = versions.cfg
+
 # allow-picked-versions = false # A buildout bug is not allowing this to work.
+
+prefer-final = true
 
 develop = .
 
@@ -29,17 +32,18 @@ instance_name = development
 [filetemplates]
 recipe = z3c.recipe.filetemplate
 eggs = lp
-# TODO: make mailman built in a more normal way
+# XXX gary 2009-5-12 bug 375751:
+# Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
 source-directory = buildout-templates
 
 [scripts]
 recipe = zc.recipe.egg
 eggs = lp
-# TODO: make mailman built in a more normal way
+# XXX gary 2009-5-12 bug 375751:
+# Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
 # note that any indentation is lost in initialization blocks
-# TODO: can any of this environ indirection be made more direct?
 initialization = import os
                  os.environ['STORM_CEXTENSIONS'] = '1'
                  os.environ['LPCONFIG'] = '${configuration:instance_name}'
