By default, disable the entire MailmanLayer tests.  Most of these tests are already disabled manually due to spurious failures, but with this change I can re-enable the lot of them.
Add a specific Makefile target to check the Mailman layer tests.

--- a/buildout-templates/bin/test.in
+++ b/buildout-templates/bin/test.in
@@ -143,6 +143,7 @@ defaults = [
     '--test-path=${buildout:directory}/lib',
     '--package=canonical',
     '--package=lp',
+    '--layer=!MailmanLayer',
     ]
 
 # Monkey-patch os.listdir to randomise the results
