make twistd available in the bin directory with the right paths

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -46,7 +46,7 @@ extra-paths = ${buildout:directory}/lib/mailman
 # note that any indentation is lost in initialization blocks
 initialization = import os
                  os.environ['STORM_CEXTENSIONS'] = '1'
-                 os.environ['LPCONFIG'] = '${configuration:instance_name}'
+                 os.environ.setdefault('LPCONFIG', '${configuration:instance_name}')
 entry-points = stxdocs=zope.configuration.stxdocs:main
 
 [iharness]
