--- a/versions.cfg
+++ b/versions.cfg
@@ -8,17 +8,20 @@ ipython = 0.9.1
 launchpadlib = 1.0.1
 lazr.uri = 1.0.1
 oauth = 1.0
+Paste = 1.7.2
+PasteDeploy = 1.3.3
 python-openid = 2.2.1
 setuptools = 0.6c9
 simplejson = 1.7.5
+SimpleTal = 4.1
 wadllib = 0.1
 z3c.recipe.filetemplate = 2.0.2
 z3c.recipe.i18n = 0.5.3
 z3c.recipe.tag = 0.2.0
 zc.buildout = 1.2.1
 zc.lockfile = 1.0.0
-zc.recipe.egg = 1.2.2
 ZConfig = 2.6.1
+zc.recipe.egg = 1.2.2
 zope.app.locales = 3.5.1
 zope.configuration = 3.6.0
 zope.event = 3.4.1
