--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts =
     tags
     iharness
     i18n
+    windmill
 unzip = true
 eggs-directory = eggs
 download-cache = download-cache
@@ -48,6 +49,7 @@ initialization = import os
                  os.environ['STORM_CEXTENSIONS'] = '1'
                  os.environ['LPCONFIG'] = '${configuration:instance_name}'
 entry-points = stxdocs=zope.configuration.stxdocs:main
+    lp-windmill=lp.scripts.utilities.windmill:main
 
 [iharness]
 recipe = zc.recipe.egg
@@ -71,3 +73,13 @@ packages = canonical.launchpad
 domain = launchpad
 output = locales
 zcml = <include file="../../site.zcml" />
+
+
+[python2.5]
+executable = /usr/bin/python2.5
+
+[windmill]
+recipe = zc.recipe.egg
+eggs = windmill
+python = python2.5
+entry-points = windmill=windmill.bin.windmill_bin:main
