Generate a buildout script to run the googletestservice.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -50,6 +50,7 @@ initialization = import os
                  os.environ.setdefault('LPCONFIG', '${configuration:instance_name}')
 entry-points = stxdocs=zope.configuration.stxdocs:main
     lp-windmill=lp.scripts.utilities.windmill:main
+    googletestservice=canonical.launchpad.testing.googletestservice:main
 
 [iharness]
 recipe = zc.recipe.egg
