--- a/versions.cfg
+++ b/versions.cfg
@@ -21,7 +21,7 @@ oauth = 1.0
 Paste = 1.7.2
 PasteDeploy = 1.3.3
 python-openid = 2.2.1
-pytz = 2007k
+pytz = 2009g
 RestrictedPython = 3.4.2
 setuptools = 0.6c9
 simplejson = 1.9.3
