Windmill needs access to the LP eggs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -81,6 +81,7 @@ executable = /usr/bin/python2.5
 
 [windmill]
 recipe = zc.recipe.egg
-eggs = windmill
+eggs = lp
+    windmill
 python = python2.5
 entry-points = windmill=windmill.bin.windmill_bin:main
