Python classes for SQL views hwdrivername and hwdriverpackagename added

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -168,6 +168,8 @@ public.hwdevicenamevariant              = SELECT
 public.hwdevice                         = SELECT
 public.hwdeviceclass                    = SELECT
 public.hwdriver                         = SELECT, INSERT
+public.hwdrivernames                    = SELECT
+public.hwdriverpackagenames             = SELECT
 public.hwsubmissiondevice               = SELECT
 public.hwsubmission                     = SELECT, INSERT, UPDATE
 public.hwsubmissionbug                  = SELECT, INSERT, UPDATE, DELETE
