add twisted back in (but, um, it is not working now...)

--- a/utilities/sourcedeps.conf
+++ b/utilities/sourcedeps.conf
@@ -23,6 +23,7 @@ sourcedeps='
     subvertpy=lp:~launchpad-pqm/subvertpy/trunk/
     testresources=lp:~launchpad-pqm/testresources/dev/
     testtools=lp:~launchpad-pqm/testtools/trunk/
+    twisted=lp:~launchpad-pqm/twisted/trunk/
     windmill=lp:~launchpad-pqm/windmill/trunk/
     wsgi-fileserver=lp:~launchpad-pqm/wsgi-fileserver/trunk/
     wsgi-jsonrpc=lp:~launchpad-pqm/wsgi-jsonrpc/trunk/
