We don't use the -rollout configs any more, and use the launchpad_standalone_1 DB during DB updates

--- a/configs/lpnet10-db-update/launchpad-lazr.conf
+++ b/configs/lpnet10-db-update/launchpad-lazr.conf
@@ -6,8 +6,8 @@
 extends: ../lpnet10/launchpad-lazr.conf
 
 [database]
-main_master: dbname=launchpad_prod_2 host=chokecherry.canonical.com
-main_slave:  dbname=launchpad_prod_2 host=chokecherry.canonical.com
+main_master: dbname=launchpad_standalone_1 host=chokecherry.canonical.com
+main_slave:  dbname=launchpad_standalone_1 host=chokecherry.canonical.com
 
 [launchpad]
 read_only: True
