--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1656,6 +1656,7 @@ public.archivesubscriber                = SELECT, UPDATE
 public.distribution                     = SELECT
 public.distroarchseries                 = SELECT
 public.distroseries                     = SELECT
+public.emailaddress                     = SELECT
 public.person                           = SELECT
 public.teammembership                   = SELECT
 public.teamparticipation                = SELECT
