lots of typing and a silly test

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1348,6 +1348,17 @@ profile_dir: .
 # datatype: filename
 memory_profile_log:
 
+[reclaimbranchspace]
+# The database user which will be used by this process.
+# datatype: string
+dbuser: reclaim-branch-space
+
+# See [error_reports].
+error_dir: none
+# See [error_reports].
+oops_prefix: none
+# See [error_reports].
+copy_to_zlog: false
 
 [revisionkarma]
 # The database user which will be used by this process.
