--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1585,6 +1585,12 @@ public.teammembership                   = SELECT
 public.teamparticipation                = SELECT
 public.validpersoncache                 = SELECT
 
+[reclaim-branch-space]
+type=user
+groups=script
+public.branchjob                        = SELECT
+public.job                              = SELECT, UPDATE
+
 [updateremoteproduct]
 # Updates Product.remote_product using bug watch information.
 type=user
