--- a/utilities/sourcedeps.conf
+++ b/utilities/sourcedeps.conf
@@ -1,4 +1,5 @@
 sourcedeps='
+    bzr=lp:~launchpad-pqm/bzr/dev/
     bzr-git=lp:~launchpad-pqm/bzr-git/devel/
     bzr-loom=lp:~launchpad-pqm/bzr-loom/trunk/
     bzr-svn=lp:~launchpad-pqm/bzr-svn/devel/
