--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1628,6 +1628,7 @@ public.libraryfiledownloadcount         = SELECT, INSERT, UPDATE, DELETE
 type=user
 groups=script
 public.codeimportresult                 = SELECT, DELETE
+public.emailaddress                     = SELECT
 public.oauthnonce                       = SELECT, DELETE
 public.openidassociation                = SELECT, DELETE
 public.openidconsumerassociation        = SELECT, DELETE
