spm-approved oops locations

--- a/configs/staging-lazr.conf
+++ b/configs/staging-lazr.conf
@@ -110,6 +110,10 @@ buglist_batch_size: 50
 oops_prefix: SMPCJ
 error_dir: /srv/bzrsyncd.staging.launchpad.net/staging-logs/mpcreationjobs
 
+[reclaimbranchspace]
+error_dir: /srv/bazaar.staging.launchpad.net/staging-logs/reclaim_branch_space
+oops_prefix: SRBS
+
 [sendbranchmail]
 oops_prefix: BMS
 error_dir: /srv/bzrsyncd.staging.launchpad.net/staging-logs/sendbranchmail
