--- a/configs/production/launchpad-lazr.conf
+++ b/configs/production/launchpad-lazr.conf
@@ -67,6 +67,10 @@ error_dir: /srv/launchpad.net/production-logs
 oops_prefix: MPCJ
 error_dir: /srv/bzrsyncd.launchpad.net/production-logs/mpcreationjobs
 
+[reclaimbranchspace]
+error_dir: /srv/bazaar.launchpad.net/production-logs/reclaim_branch_space
+oops_prefix: RBS
+
 [rosettabranches]
 oops_prefix: RSBR
 error_dir: /srv/bzrsyncd.launchpad.net/production-logs/rosettabranches
