--- a/versions.cfg
+++ b/versions.cfg
@@ -3,7 +3,7 @@ versions = versions
 
 [versions]
 CherryPy = 3.1.2
-feedvalidator = 0.0.0DEV-r1049
+feedvalidator = 0.0.0DEV-r1049-hacked
 functest = 0.8.7
 httplib2 = 0.4.0
 ipython = 0.9.1
