--- a/versions.cfg
+++ b/versions.cfg
@@ -3,6 +3,8 @@ versions = versions
 
 [versions]
 CherryPy = 3.1.2
+# We use a version of feedvalidator that has been changed to not
+# change the default socket timeout on import.
 feedvalidator = 0.0.0DEV-r1049-hacked
 functest = 0.8.7
 httplib2 = 0.4.0
