Upgrade pytz to 2009i

--- a/versions.cfg
+++ b/versions.cfg
@@ -57,7 +57,7 @@ zope.traversing = 3.5.2
 zc.recipe.testrunner = 1.1.0
 
 elementtree = 1.2.6-20050316
-pytz = 2009g
+pytz = 2009i
 
 z3c.ptcompat = 0.5.3
 z3c.pt = 1.0b16
