--- a/utilities/sourcedeps.conf
+++ b/utilities/sourcedeps.conf
@@ -1,4 +1,5 @@
 sourcedeps='
+    storm-0.14=lp:~stub/storm/0.14/
     bzr=lp:~launchpad-pqm/bzr/dev/
     bzr-git=lp:~launchpad-pqm/bzr-git/devel/
     bzr-loom=lp:~launchpad-pqm/bzr-loom/trunk/
