Revert r8679 (Revert storm 0.14 update)

--- a/versions.cfg
+++ b/versions.cfg
@@ -20,6 +20,7 @@ setuptools = 0.6c9
 simplejson = 1.9.3
 simplesettings = 0.4
 SimpleTal = 4.1
+storm = 0.14
 wadllib = 0.1
 windmill = 1.1.1
 wsgi-fileserver = 0.2.7
